--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ pluralizelisttitles = "false"
 pygmentsuseclasses = true
 
 [permalinks]
-  blog = "/:title/"
+  blog = "/:filename/"
 
 [taxonomies]
   category = "categories"
