add new post and redesign typography details

--- a/config.toml
+++ b/config.toml
@@ -12,6 +12,7 @@ pygmentsuseclasses = true
 
 [permalinks]
   blog = "/:filename/"
+  projects = "/:filename/"
 
 [taxonomies]
   category = "categories"
