restructure 'static' dir move webpack outside static folder so that webpack and node modules don't become public

--- a/config.toml
+++ b/config.toml
@@ -18,6 +18,8 @@ pygmentsuseclasses = true
   category = "categories"
   tag = "tags"
 
+ignoreFiles = [ "//node_modules$" ]
+
 [params]
   description = "UI design and development"
   author = "Bartosz Wieczorek"
