--- a/themes/metrumy/package.json
+++ b/themes/metrumy/package.json
@@ -2,22 +2,26 @@
   "name": "mysite",
   "version": "1.0.0",
   "description": "",
-  "main": "js/main.js",
+  "main": "./static/js/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Bartosz Wieczorek",
   "license": "MIT",
-  "devDependencies": {
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.13.2",
-    "css-loader": "^0.25.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "node-sass": "^3.11.1",
-    "postcss-loader": "^1.1.0",
-    "sass-loader": "^4.0.2",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.3"
+  "dependencies": {
+    "autoprefixer": "^7.1.1",
+    "css-loader": "^0.28.4",
+    "cssnano": "^3.10.0",
+    "extract-text-webpack-plugin": "^2.1.2",
+    "jshint-loader": "^0.8.4",
+    "node-sass": "^4.5.3",
+    "postcss-import": "^10.0.0",
+    "postcss-loader": "^2.0.6",
+    "postcss-scss": "^1.0.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "sugarss": "^1.0.0",
+    "uglifyjs-webpack-plugin": "^0.4.6",
+    "webpack": "^3.0.0"
   }
 }
