--- a/themes/metrumy/package.json
+++ b/themes/metrumy/package.json
@@ -21,7 +21,7 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "sugarss": "^1.0.0",
-    "uglifyjs-webpack-plugin": "^0.4.6",
+    "uglifyjs-webpack-plugin": "^1.0.0-beta.2",
     "webpack": "^3.0.0"
   }
 }
