--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bartosz Wieczorek, UI Developer",
+  "name": "UI Developer – Bartosz Wieczorek",
   "short_name": "UI Dev",
   "display": "browser",
   "start_url": ".",
