--- a/themes/metrumy/package.json
+++ b/themes/metrumy/package.json
@@ -8,7 +8,7 @@
   },
   "author": "Bartosz Wieczorek",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
     "autoprefixer": "^7.1.1",
     "css-loader": "^0.28.4",
     "cssnano": "^3.10.0",
@@ -22,6 +22,12 @@
     "style-loader": "^0.18.2",
     "sugarss": "^1.0.0",
     "uglifyjs-webpack-plugin": "^1.0.0-beta.2",
-    "webpack": "^3.0.0"
+    "webpack": "^3.0.0",
+    "eslint": "^4.11.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1"
   }
 }
