fix sw.js and links issues fetch after window load, fix link typos

--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ publishdir = "public"
 builddrafts = false
 canonifyurls = true
 theme = "metrumy"
-pluralizelisttitles = "false"
+pluralizelisttitles = false
 pygmentsuseclasses = true
 
 [permalinks]
