--- a/themes/metrumy/static/manifest.json
+++ b/themes/metrumy/static/manifest.json
@@ -4,7 +4,7 @@
   "display": "browser",
   "start_url": ".",
   "theme_color": "#44aaee",
-  "background_color": "#222233",
+  "background_color": "#efefef",
   "icons": [
     {
       "src": "icon512.png",
