edit config - 'cononifyurls' to false

--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ contentdir = "content"
 layoutdir = "layouts"
 publishdir = "public"
 builddrafts = false
-canonifyurls = true
+canonifyurls = false
 theme = "metrumy"
 pluralizelisttitles = false
 pygmentsuseclasses = true
