--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,11 @@
-baseurl = "bart747.github.io"
+baseurl = "www.bart747.github.io"
 title = "UI design and development"
 languageCode = "en-us"
 contentdir = "content"
 layoutdir = "layouts"
 publishdir = "public"
 builddrafts = false
-canonifyurls = false
+canonifyurls = true
 theme = "metrumy"
 pluralizelisttitles = false
 pygmentsuseclasses = true
