--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "www.bart747.github.io"
+baseurl = "bart747.github.io"
 title = "UI design and development"
 languageCode = "en-us"
 contentdir = "content"
