config edit: 'nanonifyurls' to true

--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ contentdir = "content"
 layoutdir = "layouts"
 publishdir = "public"
 builddrafts = false
-canonifyurls = false
+canonifyurls = true
 theme = "metrumy"
 pluralizelisttitles = false
 pygmentsuseclasses = true
