--- a/themes/metrumy/package.json
+++ b/themes/metrumy/package.json
@@ -12,6 +12,10 @@
   "license": "MIT",
   "devDependencies": {
     "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-import": "^2.11.0",
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
