--- a/themes/metrumy/package.json
+++ b/themes/metrumy/package.json
@@ -1,26 +1,26 @@
 {
-    "name": "metrumy",
-    "version": "1.0.0",
-    "description": "site asset management scripts",
-    "main": "./js/main.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "webpack",
-        "watch": "webpack --watch"
-    },
-    "author": "Bartosz Wieczorek",
-    "license": "MIT",
-    "devDependencies": {
-        "css-loader": "^0.28.11",
-        "eslint": "^4.19.1",
-        "eslint-config-airbnb-base": "^12.1.0",
-        "eslint-loader": "^2.0.0",
-        "eslint-plugin-import": "^2.11.0",
-        "extract-text-webpack-plugin": "^4.0.0-alpha.0",
-        "node-sass": "^4.9.0",
-        "sass-loader": "^7.0.1",
-        "style-loader": "^0.21.0",
-        "webpack": "^4.6.0",
-        "webpack-cli": "^2.1.3"
-    }
+  "name": "metrumy",
+  "version": "1.0.0",
+  "description": "site asset management scripts",
+  "main": "./js/main.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "watch": "webpack --watch"
+  },
+  "author": "Bartosz Wieczorek",
+  "license": "MIT",
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-import": "^2.11.0",
+    "extract-text-webpack-plugin": "^4.0.0-alpha.0",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.1.3",
+    "css-loader": "^1.0.1",
+    "node-sass": "^4.10.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1"
+  }
 }
