--- a/themes/metrumy/package.json
+++ b/themes/metrumy/package.json
@@ -5,22 +5,31 @@
   "main": "./js/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch --mode development",
+    "devb": "webpack --mode development",
+    "build": "webpack --mode production"
   },
   "author": "Bartosz Wieczorek",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^1.0.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.11.0",
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.1.3",
-    "css-loader": "^1.0.1",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1"
+    "style-loader": "^0.23.1",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.1.3"
+  },
+  "dependencies": {
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
   }
 }
