--- a/themes/metrumy/package.json
+++ b/themes/metrumy/package.json
@@ -16,19 +16,18 @@
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^1.0.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.11.0",
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
-    "node-sass": "^4.10.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
     "webpack": "^4.6.0",
-    "webpack-cli": "^2.1.3"
+    "webpack-cli": "^3.3.2"
   },
   "dependencies": {
+    "consent": "^0.1.4",
+    "cookie": "^0.4.0",
+    "cookieconsent": "^3.1.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
   }
