add meta description content

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "https://bart747.github.io"
-title = "UI design and development"
+title = "UI performance"
 languageCode = "en-us"
 contentdir = "content"
 layoutdir = "layouts"
