add TypeScript support, restructure accordingly

--- a/themes/metrumy/package.json
+++ b/themes/metrumy/package.json
@@ -12,23 +12,23 @@
   "author": "Bartosz Wieczorek",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "awesome-typescript-loader": "^5.2.1",
+    "csstype": "^2.6.5",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.11.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.17.3",
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^3.3.2"
+    "source-map-loader": "^0.2.4",
+    "typescript": "^3.5.2",
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.4"
   },
   "dependencies": {
-    "consent": "^0.1.4",
-    "cookie": "^0.4.0",
+    "@types/react": "^16.8.22",
+    "@types/react-dom": "^16.8.4",
     "cookieconsent": "^3.1.1",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
