--- a/themes/metrumy/package.json
+++ b/themes/metrumy/package.json
@@ -18,6 +18,7 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-react": "^7.17.0",
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.5.2",
