--- a/themes/metrumy/package.json
+++ b/themes/metrumy/package.json
@@ -12,24 +12,13 @@
   "author": "Bartosz Wieczorek",
   "license": "MIT",
   "devDependencies": {
-    "awesome-typescript-loader": "^5.2.1",
-    "csstype": "^2.6.5",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-react": "^7.17.0",
-    "extract-text-webpack-plugin": "^4.0.0-alpha.0",
-    "source-map-loader": "^0.2.4",
-    "typescript": "^3.5.2",
-    "webpack": "^4.35.0",
-    "webpack-cli": "^3.3.5"
-  },
-  "dependencies": {
-    "@types/react": "^16.8.22",
-    "@types/react-dom": "^16.8.4",
     "cookieconsent": "^3.1.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
-  }
+    "eslint": "^6.8.0",
+    "vue": "^2.6.11",
+    "vue-loader": "^15.9.0",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {}
 }
