--- a/themes/metrumy/package.json
+++ b/themes/metrumy/package.json
@@ -13,9 +13,12 @@
   "license": "MIT",
   "devDependencies": {
     "cookieconsent": "^3.1.1",
+    "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
+    "vanilla-text-mask": "^5.1.1",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.0",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
