--- a/themes/metrumy/package.json
+++ b/themes/metrumy/package.json
@@ -7,19 +7,23 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch --mode development",
     "devb": "webpack --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "lint": "standard"
   },
   "author": "Bartosz Wieczorek",
   "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.6",
+    "@babel/preset-env": "^7.8.6",
+    "@babel/preset-react": "^7.8.3",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.0.6",
     "cookieconsent": "^3.1.1",
     "css-loader": "^3.4.2",
-    "eslint": "^6.8.0",
-    "vanilla-text-mask": "^5.1.1",
-    "vue": "^2.6.11",
-    "vue-loader": "^15.9.0",
-    "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.6.11",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "standard": "^14.3.1",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   },
