--- a/themes/metrumy/package.json
+++ b/themes/metrumy/package.json
@@ -24,6 +24,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "standard": "^14.3.1",
+    "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   },
