--- a/themes/metrumy/package.json
+++ b/themes/metrumy/package.json
@@ -4,7 +4,7 @@
   "description": "site asset management scripts",
   "main": "./js/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "watch": "webpack --watch --mode development",
     "devb": "webpack --mode development",
     "build": "webpack --mode production",
@@ -18,15 +18,24 @@
     "@babel/preset-env": "^7.8.6",
     "@babel/preset-react": "^7.8.3",
     "babel-cli": "^6.26.0",
+    "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
     "cookieconsent": "^3.1.1",
     "css-loader": "^3.4.2",
+    "jest": "^25.1.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-test-renderer": "^16.13.0",
     "standard": "^14.3.1",
     "style-loader": "^1.1.3",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+    }
+  }
 }
