--- a/themes/metrumy/package.json
+++ b/themes/metrumy/package.json
@@ -17,17 +17,32 @@
     "@babel/core": "^7.8.6",
     "@babel/preset-env": "^7.8.6",
     "@babel/preset-react": "^7.8.3",
+    "@types/react": "^16.9.36",
+    "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^3.2.0",
+    "@typescript-eslint/parser": "^3.2.0",
     "babel-cli": "^6.26.0",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
     "cookieconsent": "^3.1.1",
     "css-loader": "^3.4.2",
+    "eslint": "^7.2.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-standard": "^4.0.1",
     "jest": "^25.1.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-test-renderer": "^16.13.0",
+    "source-map-loader": "^1.0.0",
     "standard": "^14.3.1",
     "style-loader": "^1.1.3",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.5",
     "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   },
