--- a/themes/metrumy/package.json
+++ b/themes/metrumy/package.json
@@ -2,55 +2,52 @@
   "name": "metrumy",
   "version": "1.0.0",
   "description": "site asset management scripts",
-  "main": "./js/main.js",
-  "scripts": {
-    "test": "jest",
-    "watch": "webpack --watch --mode development",
-    "devb": "webpack --mode development",
-    "build": "webpack --mode production",
-    "lint": "standard"
-  },
   "author": "Bartosz Wieczorek",
-  "license": "MIT",
+  "scripts": {
+    "build": "webpack --mode production",
+    "lint": "vue-cli-service lint",
+    "devb": "webpack --mode development",
+    "test": "jest",
+    "watch": "webpack --watch --mode development"
+  },
+  "main": "./js/main.js",
+  "dependencies": {
+    "babel": "^6.23.0"
+  },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.6",
-    "@babel/preset-env": "^7.8.6",
-    "@babel/preset-react": "^7.8.3",
-    "@types/react": "^16.9.38",
-    "@types/react-dom": "^16.9.8",
-    "@typescript-eslint/eslint-plugin": "^3.2.0",
-    "@typescript-eslint/parser": "^3.2.0",
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@vue/cli-plugin-eslint": "^4.5.6",
+    "@vue/eslint-config-standard": "^5.1.2",
     "babel-cli": "^6.26.0",
-    "babel-jest": "^25.1.0",
-    "babel-loader": "^8.0.6",
+    "babel-jest": "^25.5.1",
+    "babel-loader": "^8.1.0",
     "cookieconsent": "^3.1.1",
-    "css-loader": "^3.4.2",
-    "eslint": "^7.2.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-loader": "^4.0.2",
-    "eslint-plugin-import": "^2.21.2",
+    "css-loader": "^3.6.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-standard": "^4.0.1",
-    "jest": "^25.1.0",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-test-renderer": "^16.13.0",
-    "source-map-loader": "^1.0.0",
-    "standard": "^14.3.1",
-    "style-loader": "^1.1.3",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^6.2.2",
+    "jest": "^25.5.4",
+    "source-map-loader": "^1.1.0",
+    "standard": "^14.3.4",
+    "style-loader": "^1.2.1",
     "ts-loader": "^7.0.5",
-    "typescript": "^3.9.5",
-    "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11"
+    "typescript": "^3.9.7",
+    "vue": "^2.6.12",
+    "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   },
-  "dependencies": {},
   "jest": {
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
     }
-  }
+  },
+  "license": "MIT"
 }
