--- a/themes/metrumy/package.json
+++ b/themes/metrumy/package.json
@@ -11,37 +11,31 @@
     "watch": "webpack --watch --mode development"
   },
   "main": "./js/main.js",
-  "dependencies": {
-    "babel": "^6.23.0"
-  },
   "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@vue/cli-plugin-eslint": "^4.5.6",
-    "@vue/eslint-config-standard": "^5.1.2",
+    "@babel/plugin-syntax-jsx": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
     "babel-cli": "^6.26.0",
-    "babel-jest": "^25.5.1",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.0.2",
+    "babel-preset-react-app": "^3.1.2",
     "cookieconsent": "^3.1.1",
-    "css-loader": "^3.6.0",
+    "css-loader": "^1.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.2.2",
     "jest": "^25.5.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "source-map-loader": "^1.1.0",
     "standard": "^14.3.4",
-    "style-loader": "^1.2.1",
+    "style-loader": "^0.23.0",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.7",
-    "vue": "^2.6.12",
-    "vue-loader": "^15.9.3",
-    "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^4.19.1",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.11.0"
   },
   "jest": {
     "moduleNameMapper": {
